clusters/production/automation/esphome/esphome-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: esphome
  namespace: automation
spec:
  parentRefs:
  - name: internal
    namespace: gateway
    sectionName: https
  hostnames:
  - esphome.rees.ca
  rules:
  - backendRefs:
    - name: esphome
      port: 6052
