clusters/production/automation/esphome/esphome-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/instance: esphome
    app.kubernetes.io/name: esphome
  name: esphome
  namespace: default
spec:
  ingressClassName: internal-nginx
  rules:
  - host: esphome.rees.ca
    http:
      paths:
      - backend:
          service:
            name: esphome
            port:
              number: 6052
        path: /
        pathType: Prefix
